# pm

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile
.claude/: ralph-loop.local.md
backend/: AGENTS.md  ai_service.py  app.py  board_updates.py  db.py  pyproject.toml  rate_limit.py  schemas.py  test_ai_chat.py  test_ai_service.py  test_app.py  test_board_updates.py  test_db.py  test_rate_limit.py
backend/static/: index.html
docs/: DATABASE.md  PLAN.md  code_review.md
frontend/: AGENTS.md  package.json  playwright.config.ts
frontend/scripts/: e2e-server.sh
frontend/src/app/: globals.css
frontend/src/components/: ActivityDialog.test.tsx  ActivityDialog.tsx  BoardMembersDialog.test.tsx  BoardMembersDialog.tsx  BoardPicker.test.tsx  BoardPicker.tsx  ChangePasswordDialog.test.tsx  ChangePasswordDialog.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  CopilotDialog.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginGate.test.tsx  LoginGate.tsx  ModalShell.tsx  NewCardForm.tsx
frontend/src/lib/: api.ts  kanban.test.ts  kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.sh  stop.sh
