[project]
name = "pm-backend"
version = "0.1.0"
description = "FastAPI backend for the Project Management MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.24.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.urls]
homepage = "https://example.com"
